force-app/main/default/objects/Employment__c/Employment__c.object-meta.xml
<CustomObject>
    <description>Represents where a Contact currently or previously was employed</description>
    <label>Employment</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>