force-app/main/default/objects/Employment__c/validationRules/Monthly_income_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_income_must_be_positive</fullName>
    <active>true</active>
    <description>Monthly income must be positive</description>
    <errorConditionFormula>Monthly_Income__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Monthly_Income__c</errorDisplayField>
    <errorMessage>Monthly income must be positive</errorMessage>
</ValidationRule>