force-app/main/default/objects/Employment__c/validationRules/Start_date_must_be_before_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_must_be_before_end_date</fullName>
    <active>true</active>
    <description>Start Date must be before End Date</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date must be before end date</errorMessage>
</ValidationRule>